<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="18dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <uksw.android.smartdocs.shared.SettingsView
        android:id="@+id/settings_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/button_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_sync" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_file" />

    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_file" />

    <Button
        android:id="@+id/button_col_lab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_col_lab" />

    <Button
        android:id="@+id/button_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_file" />

</LinearLayout>